# IP-Adapter-Instruct

./: LICENSE  README.md  demo.py  demo_sd3_instruct.py  demo_sdxl.py  pyproject.toml  requirements.txt
ip_adapter/: ip_adapter.py  ip_adapter_instruct.py  ip_joint_attention.py  joint_attention_block_modified.py  pipeline_stable_diffusion_extra_cfg.py  pipeline_stable_diffusion_sd3_extra_cfg.py  pipeline_stable_diffusion_sdxl_extra_cfg.py  resampler_Instruct.py  resampler_SD3.py
